API-10994 remove guava (#154)