@@ -2,7 +2,6 @@ package gov.va.api.health.validation.api;
 
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Map;
 import java.util.function.Supplier;
 import lombok.AllArgsConstructor;
@@ -12,9 +11,8 @@ import org.junit.jupiter.api.Test;
 public class ZeroOrOneOfVerifierTest {
   @Test
   public void allFields() {
-    Map<String, Supplier<?>> stringTypes = ImmutableMap.of("", () -> "hello");
-    Map<Class<?>, Supplier<?>> types =
-        ImmutableMap.of(String.class, () -> "hello", Integer.class, () -> 1);
+    Map<String, Supplier<?>> stringTypes = Map.of("", () -> "hello");
+    Map<Class<?>, Supplier<?>> types = Map.of(String.class, () -> "hello", Integer.class, () -> 1);
     assertThrows(
         IllegalStateException.class,
         () -> {
@@ -30,9 +28,8 @@ public class ZeroOrOneOfVerifierTest {
 
   @Test
   public void oneEnum() {
-    Map<String, Supplier<?>> stringTypes = ImmutableMap.of("", () -> "hello");
-    Map<Class<?>, Supplier<?>> types =
-        ImmutableMap.of(String.class, () -> "hello", Integer.class, () -> 1);
+    Map<String, Supplier<?>> stringTypes = Map.of("", () -> "hello");
+    Map<Class<?>, Supplier<?>> types = Map.of(String.class, () -> "hello", Integer.class, () -> 1);
     ZeroOrOneOfVerifier.builder()
         .sample(new ZeroOrOne(null, null, ZeroOrOneEnum.ONE))
         .fieldPrefix("zeroOrOne")
@@ -44,9 +41,8 @@ public class ZeroOrOneOfVerifierTest {
 
   @Test
   public void oneInteger() {
-    Map<String, Supplier<?>> stringTypes = ImmutableMap.of("", () -> "hello");
-    Map<Class<?>, Supplier<?>> types =
-        ImmutableMap.of(String.class, () -> "hello", Integer.class, () -> 1);
+    Map<String, Supplier<?>> stringTypes = Map.of("", () -> "hello");
+    Map<Class<?>, Supplier<?>> types = Map.of(String.class, () -> "hello", Integer.class, () -> 1);
     ZeroOrOneOfVerifier.builder()
         .sample(new ZeroOrOne(null, 1, null))
         .fieldPrefix("zeroOrOne")
@@ -58,9 +54,8 @@ public class ZeroOrOneOfVerifierTest {
 
   @Test
   public void oneString() {
-    Map<String, Supplier<?>> stringTypes = ImmutableMap.of("", () -> "hello");
-    Map<Class<?>, Supplier<?>> types =
-        ImmutableMap.of(String.class, () -> "hello", Integer.class, () -> 1);
+    Map<String, Supplier<?>> stringTypes = Map.of("", () -> "hello");
+    Map<Class<?>, Supplier<?>> types = Map.of(String.class, () -> "hello", Integer.class, () -> 1);
     ZeroOrOneOfVerifier.builder()
         .sample(new ZeroOrOne("zeroOr", null, null))
         .fieldPrefix("zeroOrOne")
@@ -72,9 +67,8 @@ public class ZeroOrOneOfVerifierTest {
 
   @Test
   public void twoFields() {
-    Map<String, Supplier<?>> stringTypes = ImmutableMap.of("", () -> "hello");
-    Map<Class<?>, Supplier<?>> types =
-        ImmutableMap.of(String.class, () -> "hello", Integer.class, () -> 1);
+    Map<String, Supplier<?>> stringTypes = Map.of("", () -> "hello");
+    Map<Class<?>, Supplier<?>> types = Map.of(String.class, () -> "hello", Integer.class, () -> 1);
     assertThrows(
         IllegalStateException.class,
         () -> {
@@ -90,9 +84,8 @@ public class ZeroOrOneOfVerifierTest {
 
   @Test
   public void zeroFields() {
-    Map<String, Supplier<?>> stringTypes = ImmutableMap.of("", () -> "hello");
-    Map<Class<?>, Supplier<?>> types =
-        ImmutableMap.of(String.class, () -> "hello", Integer.class, () -> 1);
+    Map<String, Supplier<?>> stringTypes = Map.of("", () -> "hello");
+    Map<Class<?>, Supplier<?>> types = Map.of(String.class, () -> "hello", Integer.class, () -> 1);
     ZeroOrOneOfVerifier.builder()
         .sample(new ZeroOrOne(null, null, null))
         .fieldPrefix("zeroOrOne")
